fixed overflow

--- a/css/commonstyle.css
+++ b/css/commonstyle.css
@@ -59,6 +59,7 @@ body {
 .preload h3 {
     position: absolute;
     top: 75%;
+    overflow: visible;
     transform: translateY(-75%);
     color: rgb(255, 255, 255);
     font-size: 30px;
